@@ -9,7 +9,7 @@ rm -rf mods
 mkdir mods
 
 echo " > multi-compiling modules"
-javac9 --module-path libs --module-source-path "./*/src/main/java" -d classes --module monitor
+javac9 --module-path libs --module-source-path "./*/src/main/java" -d classes --module monitor --add-modules monitor.observer.alpha,monitor.observer.beta
 
 echo " > packaging modules"
 jar9 --create --file mods/monitor.observer.jar -C classes/monitor.observer .
